renamed interpreter to semantics, defined StatementSemantics.evaluate